--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
       - DATABASE_URL=postgresql+psycopg2://${DB_USERNAME}:${DB_PASSWORD}@db:${DB_HOST}/${DB_MODEL}
     volumes:
       - ./app:/src/
-      - ./certs:/certs/
+      - ./client_secrets.json:/src/client_secrets.json
+      - ./settings.yaml:/src/settings.yaml
+      - ./certs:/src/certs/
     command: bash -c "sleep 30; uvicorn main:app --host 0.0.0.0 --port 8000"
     depends_on:
       - db
